--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,26 @@
     box-sizing: border-box;
 }
 
+$btnLight: #1976D2;
 ::-webkit-scrollbar {
     display: none !important;
+}
+
+.link {
+    position: relative;
+}
+
+.link::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: -10px;
+    bottom: -2px;
+    background: $btnLight;
+    transition: 0.5s ease-in-out;
+}
+
+.link:hover::before {
+    width: 140%;
 }
