--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 
 
 @layer utilities{
-    .activeLink{
-        @apply text-primaryDark
+    .mycontainer{
+        @apply w-screen h-fit sm:w-[90vw] lg:w-[88vw] flex flex-col items-center py-10
     }
 }
